# BattleSystem

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: compiler.cmake  gtest.cmake
docs/: Architecture.md
src/: CMakeLists.txt
src/arena/: CMakeLists.txt  main.cpp
src/battle_system/: CMakeLists.txt  battle_system.cpp  battle_system.h  entity.cpp  entity.h  exports.h
test/: CMakeLists.txt  battle_system_tests.cpp  entity_tests.cpp
